# AutoEpicSeven

./: .gitignore  COMMIT_MODULES.md  SAINT37_TASK_SUMMARY.md  aes.py  pyproject.toml  src.py
.github/ISSUE_TEMPLATE/: bug_report_cn.yaml  bug_report_en.yaml
community/: aio.py
config/: deploy.template-cn.yaml  deploy.template.yaml  template.json
deploy/Windows/: config.py  git.py  template.yaml
dev_tools/: screenshot.py  support_extract.py
module/: alas.py  exception.py
module/config/: config.py  config_generated.py  config_manual.py  config_updater.py  server.py  utils.py
module/daemon/: benchmark.py
module/device/: connection.py  device.py
module/notify/: notify.py
module/ocr/: ocr.py
module/webui/: app.py  base.py  community_auth.py  process_manager.py  task_extension.py  updater.py  utils.py
tasks/arena/: arena.py  dashboard.py  entry.py
tasks/assignment/: ui.py
tasks/base/: main_page.py  page.py  popup.py  resource_bar.py  ui.py
tasks/combat/: combat.py  entry.py  execute.py  fuel.py  plan.py  prepare.py  runtime.py  saint37.py
tasks/community_aio/: community_aio.py
tasks/community_auth/: community_auth.py
tasks/daily/: daily_quest.py
tasks/dungeon/: dungeon.py  entry.py  execute.py  plan.py  prepare.py  runtime.py  saint37.py  side_story.py
tasks/freebies/: code_used.py  support_reward.py
tasks/gacha/: gacha.py
tasks/item/: data_update.py  synthesize.py  ui.py
tasks/knights/: donate.py  expedition.py  knights.py  support.py  team_battle.py  team_battle_status.py  weekly_task.py  world_boss.py
webapp/: package.json
(+164 files in other folders)
