[project]
name = "autoepicseven"
version = "0.0.1"
description = "av dependency is not satisfied"
requires-python = ">=3.10"
dependencies = [
    "adbutils==1.2.9",
    "aiofiles>=25.1.0",
    "av>=16.1.0",
    "inflection==0.5.1",
    "jellyfish==0.11.2",
    "lz4==4.3.2",
    "numpy==1.24.3",
    "onepush==1.3.0",
    "opencv-python==4.7.0.72",
    "pillow==9.5.0",
    "pponnxcr==2.0",
    "prettytable==2.2.1",
    "psutil==5.9.3",
    "pydantic>=2.4",
    "pywebio==1.8.3",
    "pyyaml==6.0",
    "rich==13.3.5",
    "scipy==1.10.1",
    "starlette==0.14.2",
    "tqdm==4.65.0",
    "uiautomator2==2.16.17",
    "uiautomator2cache==0.3.1",
    "uvicorn[standard]==0.17.6",
    "wrapt>=1.14.0",
]
